package net.civeira.phylax.features.access.platformidentity.domain;

import java.util.ArrayList;
import java.util.HashMap;
import java.util.List;
import java.util.Map;
import java.util.Optional;

import lombok.AccessLevel;
import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.EqualsAndHashCode;
import lombok.Getter;
import lombok.NonNull;
import lombok.ToString;
import lombok.With;
import lombok.experimental.Delegate;
import net.civeira.phylax.common.exception.ConstraintException;
import net.civeira.phylax.common.value.validation.ConstraintFailList;
import net.civeira.phylax.features.access.platformidentity.domain.event.PlatformIdentityCreateEvent;
import net.civeira.phylax.features.access.platformidentity.domain.event.PlatformIdentityDeleteEvent;
import net.civeira.phylax.features.access.platformidentity.domain.event.PlatformIdentityEvent;
import net.civeira.phylax.features.access.platformidentity.domain.event.PlatformIdentityUpdateEvent;
import net.civeira.phylax.features.access.platformidentity.domain.valueobject.RelyingPartyVO;
import net.civeira.phylax.features.access.platformidentity.domain.valueobject.RolesVO;
import net.civeira.phylax.features.access.platformidentity.domain.valueobject.TrustedClientVO;
import net.civeira.phylax.features.access.platformidentity.domain.valueobject.UidVO;
import net.civeira.phylax.features.access.platformidentity.domain.valueobject.UserVO;
import net.civeira.phylax.features.access.platformidentity.domain.valueobject.VersionVO;

/**
 * platform-identity
 */
@Builder
@Getter
@With
@ToString
@AllArgsConstructor(access = AccessLevel.PRIVATE)
@EqualsAndHashCode
public class PlatformIdentity implements PlatformIdentityRef {

  /**
   * Prepare a new platform identity with the provided values
   *
   * @autogenerated EntityGenerator
   * @param change A set of values to create a new platform identity
   * @throws ConstraintException If there are some constraints fails on the changes.
   * @return A well formed platform identity.
   */
  public static PlatformIdentity create(final PlatformIdentityChangeSet change)
      throws ConstraintException {
    PlatformIdentity instance = new PlatformIdentity(change, Optional.empty());
    instance.addEvent(PlatformIdentityCreateEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * List of events
   *
   * @autogenerated EntityGenerator
   */
  @Builder.Default
  private List<PlatformIdentityEvent> recordedEvents = List.of();

  /**
   * El relying party de platform identity
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private RelyingPartyVO relyingPartyValue = RelyingPartyVO.nullValue();

  /**
   * El roles de platform identity
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private RolesVO rolesValue;

  /**
   * El trusted client de platform identity
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private TrustedClientVO trustedClientValue = TrustedClientVO.nullValue();

  /**
   * El identificador de la aplicacion
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private UidVO uidValue;

  /**
   * El user de platform identity
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @NonNull
  private UserVO userValue;

  /**
   * Campo con el número de version de platform identity para controlar bloqueos optimistas
   *
   * @autogenerated EntityGenerator
   */
  @Delegate
  @Builder.Default
  private VersionVO versionValue = VersionVO.nullValue();

  /**
   * @autogenerated EntityGenerator
   * @param attribute
   * @param previous
   */
  private PlatformIdentity(final PlatformIdentityChangeSet attribute,
      final Optional<PlatformIdentity> previous) {
    ConstraintFailList list = new ConstraintFailList();
    this.uidValue = attribute.readUid(previous, list);
    this.userValue = attribute.readUser(previous, list);
    this.relyingPartyValue = attribute.readRelyingParty(previous, list);
    this.trustedClientValue = attribute.readTrustedClient(previous, list);
    this.rolesValue = attribute.readRoles(previous, list);
    this.versionValue = attribute.readVersion(previous, list);
    if (list.hasErrors()) {
      throw new ConstraintException("Invalid values on PlatformIdentity", list);
    }
    this.recordedEvents = previous.map(PlatformIdentity::getRecordedEvents).orElseGet(List::of);
  }

  /**
   * Apply changes to delete a platform identity
   *
   * @autogenerated EntityGenerator
   * @return A instance of platform identity ready to be deleted
   */
  public PlatformIdentity delete() {
    PlatformIdentity instance =
        new PlatformIdentity(new PlatformIdentityChangeSet(), Optional.of(this));
    instance.addEvent(PlatformIdentityDeleteEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * @autogenerated EntityGenerator
   * @return
   */
  public Map<String, String> toMap() {
    Map<String, String> map = new HashMap<>(6);
    uidToMap(map);
    userToMap(map);
    relyingPartyToMap(map);
    trustedClientToMap(map);
    rolesToMap(map);
    versionToMap(map);
    return map;
  }

  /**
   * Modify the values for some of the properties of a platform identity
   *
   * @autogenerated EntityGenerator
   * @param change The properties to be modified
   * @throws ConstraintException If there are some constraints fails on the changes.
   * @return A modified instance of platform identity
   */
  public PlatformIdentity update(final PlatformIdentityChangeSet change)
      throws ConstraintException {
    PlatformIdentity instance = new PlatformIdentity(change, Optional.of(this));
    instance.addEvent(PlatformIdentityUpdateEvent.builder().payload(instance).build());
    return instance;
  }

  /**
   * @autogenerated EntityGenerator
   * @return
   */
  public PlatformIdentity withNextVersion() {
    return withVersionValue(VersionVO.from(nextVersion()));
  }

  /**
   * @autogenerated EntityGenerator
   * @param event
   */
  private void addEvent(final PlatformIdentityEvent event) {
    List<PlatformIdentityEvent> events = new ArrayList<>(this.recordedEvents);
    events.add(event);
    this.recordedEvents = List.copyOf(events);
  }
}
