' @autogenerated
@startuml
left to right direction
title Clases para platform identity
class access.User{
uid:string
name:string
password:string
email:string
wellcomeAt:datetime
enabled:boolean
approve:UserApproveOptions
temporalPassword:boolean
useSecondFactors:boolean
secondFactorSeed:string
blockedUntil:datetime
provider:string
version:integer
list()
retrieve()
create()
update()
delete()
register()
verify()
accept()
reject()
disable()
enable()
unlock()
block()
setMfaSeed()
changePassword()
}
class access.RelyingParty{
uid:string
code:string
apiKey:string
enabled:boolean
version:integer
list()
retrieve()
create()
update()
delete()
enable()
disable()
}
class access.TrustedClient{
uid:string
code:string
allowAllScopes:boolean
publicAllow:boolean
secretOauth:string
enabled:boolean
version:integer
list()
retrieve()
create()
update()
delete()
enable()
disable()
}
class access.PlatformIdentityRole{
uid:string
version:integer
}
class access.PlatformIdentity{
uid:string
version:integer
list()
retrieve()
create()
update()
delete()
}
access.User "1"  o--  "N*" access.PlatformIdentity: user
access.RelyingParty "1"  o--  "N*" access.PlatformIdentity: relyingParty
access.TrustedClient "1"  o--  "N*" access.PlatformIdentity: trustedClient
access.PlatformIdentityRole "N*"  o--  "1" access.PlatformIdentity: roles

footer Generado el %date("dd.MM.yyyy' a las 'HH:mm")
@enduml
